--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="_includes/js/Actor.js"></script>
         <script src="_includes/js/HealthBar.js"></script>
         <script src="_includes/js/init.js"></script>
-        <script src="http://guntlondon.github.io/gunt-badge/gunt-badge.min.js"></script>
+        <script src="https://madebyloosers.github.io/looser-badge/looser-badge.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     </head>
     <body>
